Yield control over the code style to black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,8 @@
 [build-system]
 # Minimum requirements for the build system to execute.
 requires = ["setuptools", "wheel"]  # PEP 508 specifications.
+
+
+[tool.black]
+# We're using black to auto format this code
+line-length = 128
